fix: `.atuiKernel_Header div.optionScrollable was overflowing the page`
- The hard bug is partially resolved. It seems to be a navigator issue now ; on tablets, the header's width is forced to be the viewport's width.
- Webpage's min-height follows now the dynamic height of the viewport to prevent issues on floating panels in phones' web browsers.

--- a/atui/kernel/src/header.css
+++ b/atui/kernel/src/header.css
@@ -118,7 +118,6 @@
     display: flex;
     align-items: center;
     gap: 5px;
-    width: max-content;
 }
 
 .atuiKernel_Header > div.optionLevelLink :is(i, img) {
@@ -127,10 +126,6 @@
     height: 1.125rem;
 }
 
-/* 
- * div.optionScrollable can work only with div.optionCarousel and div.optionFixed
- TODO: make a Header's container with JS visual patch which set the height equal to the Header's height
- */
 .atuiKernel_Header > div.optionScrollable {
     overflow-x: auto;
     scroll-snap-type: x mandatory;
@@ -139,6 +134,6 @@
 }
 
 .atuiKernel_Header > div.optionScrollable > * {
-    flex: 0 0 max-content;
+    flex: none;
     scroll-snap-align: start;
 }
