--- a/atui/kernel/src/section.css
+++ b/atui/kernel/src/section.css
@@ -62,7 +62,7 @@
 }
 
 .atuiKernel_BodyContent {
-    min-height: 100vh;
+    min-height: 100dvh;
     display: flex;
     flex-direction: column;
 }
